z-index fix

--- a/angular/src/app/components/fixedWidget.directive.scss
+++ b/angular/src/app/components/fixedWidget.directive.scss
@@ -1,6 +1,6 @@
 .fixed-widget-fixed {
   position: fixed;
   top: 0;
-  z-index: 1;
+  z-index: 2;
   background-color: lightgray;
 }
